tests/Tuc/Fixtures/errors/DataPostedWithoutACaller.tuc
tuc parse error test
participants
    [PersonDatabase] parts

Person -> [PersonDatabase]
